# rview2

./: .astylerc  .clang-format  .clang-uml  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  boot.json  config  docker-compose.yml  todo
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml  cmake_lnx.yml  cmake_win.yml
include/: animinstance.hpp  animmodel.hpp  commandbuffer.hpp  commandpool.hpp  conf.hpp  drop.hpp  framebuffer.hpp  gamestate.hpp  genericinstance.hpp  genericmodel.hpp  iksolver.hpp  logger.hpp  model_manager.hpp  modelsettings.hpp  mouse.hpp  netbuffer.hpp  netclient.hpp  netserver.hpp  obs_bridge.hpp  playout.hpp  playoutcircle.hpp  playoutgeneric.hpp  playoutground.hpp  playoutmenubg.hpp  playoutmodel.hpp  playoutplayer.hpp  playoutref.hpp  playoutstatic.hpp  pline.hpp  quadmodel.hpp  renderpass.hpp  ssbo.hpp  ssbomesh.hpp  staticinstance.hpp  staticmodel.hpp  staticsettings.hpp  texinstance.hpp  texmodel.hpp  timer.hpp  ubo.hpp  (+14 more)
include/anim/: anim.hpp  anim2.hpp  baker2.hpp  flatskelly.hpp  iksolver.hpp  vkanim.hpp  vkchannel.hpp  vkclip.hpp  vknode.hpp
include/buffer/: ssbo.hpp
include/core/: jobs.hpp  rvk.hpp  scene.hpp
include/dbg/: demo.hpp  trace.hpp
include/exp/: particle.hpp
include/net/: netbuffer.hpp  netclient.hpp  netserver.hpp
include/rend/: graph.hpp
include/vk/: commandbuffer.hpp  commandpool.hpp  framebuffer.hpp
mods/: anim.cxxm  tex.cxxm  tex.ixx
scripts/: mermaid.ps1  patch_clangd.mts
shaders/: anim.slang  c0.cpp  c0.glsl  c0.slang  c0_nop.glsl  comp.slang  dbg.slang  decay_glitch.frag  decay_glitch.vert  doom_gbuffer.slang  doom_ptrace.slang  fgen.slang  gen.slang  gen_nolight.slang  gltf_gpu_dquat.frag  menufog.frag  particle.slang  player.frag  player.slang  player.vert  playeruint.frag  playeruint.vert  poe.glsl  red.slang  skin.slang  static.frag  static.slang  statsicshop.vert.slang  vgen.slang  vplayer.slang
shared/: animation.slang
src/: README.md  animmodel.cpp  commandbuffer.cpp  main.cpp  netclient.hpp  netserver.hpp  netutils.hpp  playout.cpp  renderpass.cpp  ssbomesh.cpp  ubo.cpp  vkobjs.hpp  vkrenderer.cpp  vkrenderer.hpp  vksyncobjects.hpp  vktexture.cpp
src/accessory/: mouse.cpp
src/anim/: iksolver.cpp  vkanim.cpp  vkchannel.cpp  vkclip.cpp  vknode.cpp
src/auxiliary/: drop.cpp  ui.cpp
src/buffer/: ssbo.cpp  ssbomesh.cpp  ubo.cpp  vkebo.cpp  vkvbo.cpp
src/core/: vkrenderer.cpp  vkwind.cpp
src/doom/: doom.cpp
src/glue/: playout.cpp  pline.cpp  vkshader.cpp  vktex.cpp  vktexture.cpp
src/instance/: genericinstance.cpp  staticinstance.cpp
src/model/: animmodel.cpp  genericmodel.cpp  model_manager.cpp  quadmodel.cpp  staticmodel.cpp  texmodel.cpp
src/net/: netclient.cpp  netserver.cpp
src/obs/: win32.cpp
src/playout/: playoutcircle.cpp  playoutgeneric.cpp  playoutground.cpp  playoutmenubg.cpp  playoutmodel.cpp  playoutplayer.cpp  playoutstatic.cpp
src/pulse/: gamestate.cpp
src/subcore/: vkcam.cpp
src/tools/: timer.cpp  tools.cpp
src/vk/: commandbuffer.cpp  commandpool.cpp  framebuffer.cpp  renderpass.cpp  vksyncobjects.cpp
sub/: umods.ps1  umods.sh
tools/: windeploy.cxx
